Thu Jan 18 22:24:58 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/EntryExit.h:
        * dds/DCPS/transport/framework/TransportHeader.cpp:
	  Modify usage of Debug macros.

Thu Jan 18 21:46:17 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
	  Cosmetic changes.

        * dds/DCPS/transport/framework/EntryExit.h:
	  Some private members were logically constants. Made them
          explicit.

Wed Jan 17 23:31:44 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/EntryExit.h:

	  Changed broken #include from "ace/OS_NS_unistd.h" to
	  "ace/OS_NS_string.h" since that's where ACE_OS::strncpy() lives.

Wed Jan 17 19:44:54 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.inl:
          Changed default passive_connect_duration to 10000 millisecs.

        * tests/DCPS/FooTest3_1/SimpleDataReader.cpp:
        * tests/DCPS/FooTest3_2/SimpleDataReader.cpp:
          Commented out some printouts which were outputting a lot of
          nightly builds logs.

Wed Jan 17 19:36:34 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * tests\transport\mcast_simple\PubDriver.cpp:
        * tests\transport\mcast_simple_n\PubDriver.cpp:

          Fixed the test failures on windows. It appears that we should not
          specify the local_address for the publisher, it should use the
          default value, otherwise the subscriber will not receive the
          samples.

Wed Jan 17 17:39:49 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\transport\simpleMCAST\SimpleMcastSocket.inl:

          Fixed the mcast test failure on windows. The receiver should
          call join() to the mcast group instead of just open with the
          mcast socket with the mcast group address.

Tue Jan 16 20:54:22 UTC 2007  Yan Dai  <dai_y@ociweb.com>
