@@ -1,3 +1,8 @@
+Thu Jan 18 23:52:01 UTC 2007  Ciju John  <johnc@ociweb.com>
+
+        * dds/DCPS/transport/framework/DataLink.cpp:
+	  Removed tabs.
+
 Thu Jan 18 22:24:58 UTC 2007  Ciju John  <johnc@ociweb.com>
 
         * dds/DCPS/transport/framework/DataLink.cpp:
